2010-11-14  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * waf:
   Update Waf to current SVN version.


2010-11-11  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * waf, wscript:
   Update Waf to version 1.6.1.
   Update wscript for new Waf version, make it Python 3 compatible.


2010-11-11  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/document.c:
   Display better error messages when saving a document fails (patch by
   Dimitar Zhekov, thanks).
 * src/editor.c:
   Fix wrong snippet indentation when original cursor line has
   non-indentation whitespace (patch by david, thanks).
 * doc/geany.txt, doc/geany.html, data/filetypes.php,
   data/filetypes.docbook, data/filetypes.xml, data/filetypes.html:
   Enable XML tag autoindentation for PHP, Docbook and add docs for
   this setting (patch by Eugene Arshinov, thanks).


2010-11-10  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/templates.c, src/document.c:
   Use LF line endings for templates internally instead of default
   pref because the default can change. This fixes missing line
   endings sometimes when changing default setting.
 * src/document.c:
   Fix not reporting an error message when saving a document fails.
   Check result of fclose().
 * src/filetypesprivate.h, src/filetypes.c, src/editor.c,
   data/filetypes.xml, data/filetypes.html:
   Add xml_indent_tags filetype setting for documents using the
   HTML/XML lexers (patch by Eugene Arshinov, thanks).
 * src/document.c:
   Set errno to 0 before doing disk I/O to prevent confusing error
   messages on save failure.


2010-11-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/templates.c, src/filetypes.c:
   Save build commands for filetype None (patch by Lex, thanks).
   Make filetypes_get_conf_extension() return "common" for filetype
   None.
 * src/templates.c:
   Convert line endings for file templates.
   Fix line endings when using file header template in a file template