@@ -6,7 +6,7 @@
 <meta name="generator" content="Docutils 0.4: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="2010-11-08" />
+<meta name="date" content="2010-11-11" />
 <style type="text/css">
 
 /*
@@ -139,7 +139,7 @@ Stylesheet for Geany's documentation based on a version of John Gabriele.
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>2010-11-08</td></tr>
+<td>2010-11-11</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.20</td></tr>
 </tbody>
@@ -1246,6 +1246,9 @@ previous line.</dd>
 <dd>Similar to <em>Current chars</em> but the closing brace will be aligned to
 match the indentation of the line with the opening brace.</dd>
 </dl>
+<p>There is also XML-tag auto-indentation. This is enabled when the
+mode is more than just Basic, and is also controlled by a filetype
+setting - see <a class="reference" href="#xml-indent-tags">xml_indent_tags</a>.</p>
 </div>
 <div class="section">
 <h3><a class="toc-backref" href="#id49" id="bookmarks" name="bookmarks">Bookmarks</a></h3>
@@ -4444,17 +4447,13 @@ doesn't use the lexer_filetype key itself.</dd>
 </tbody>
 </table>
 </dd>
+</dl>
+<dl class="docutils" id="xml-indent-tags">
 <dt>xml_indent_tags</dt>
-<dd><p class="first">If this setting is set to <em>true</em>, a new line after a line ending with an
+<dd>If this setting is set to <em>true</em>, a new line after a line ending with an
 unclosed XML/HTML tag will be automatically indented. This only applies
 to filetypes for which the HTML or XML lexer is used. Such filetypes have
-this setting in their system configuration files.</p>
-<div class="last note">
-<p class="first admonition-title">Note</p>
-<p class="last">This setting will not work if the <em>XML/HTML tag
-autocompletion</em> pref is set.</p>
-</div>
-</dd>
+this setting in their system configuration files.</dd>
 </dl>
 </div>
 <div class="section">
@@ -6357,7 +6356,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2010-11-11 17:52 UTC.
+Generated on: 2010-11-15 13:01 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
