@@ -814,6 +814,10 @@ Match braces
     Similar to *Current chars* but the closing brace will be aligned to
     match the indentation of the line with the opening brace.
 
+There is also XML-tag auto-indentation. This is enabled when the
+mode is more than just Basic, and is also controlled by a filetype
+setting - see `xml_indent_tags`_.
+
 
 Bookmarks
 ^^^^^^^^^
@@ -3731,15 +3735,13 @@ symbol_list_sort_mode
     1       Sort tags by appearance (line number)
     =====   =====================================
 
+.. _xml_indent_tags:
+
 xml_indent_tags
     If this setting is set to *true*, a new line after a line ending with an
     unclosed XML/HTML tag will be automatically indented. This only applies
     to filetypes for which the HTML or XML lexer is used. Such filetypes have
     this setting in their system configuration files.
-
-    .. note::
-        This setting will not work if the *XML/HTML tag
-        autocompletion* pref is set.
 
 
 [build_settings] Section
